--- a/RFRAP.Web/appsettings.Development.json
+++ b/RFRAP.Web/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=rfrap_db;User=postgres;Password=postGet5243"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=rfrap_db;User=postgres;Password=1111"
   }
 }
