--- a/RFRAP.Domain/RFRAP.Domain.csproj
+++ b/RFRAP.Domain/RFRAP.Domain.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="FluentValidation" Version="11.9.0" />
       <PackageReference Include="Serilog" Version="3.1.1" />
     </ItemGroup>
 
