--- a/RFRAP.Domain/RFRAP.Domain.csproj
+++ b/RFRAP.Domain/RFRAP.Domain.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="Serilog" Version="3.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\GasStations\" />
+    </ItemGroup>
+
 </Project>
