--- a/RFRAP.Domain/RFRAP.Domain.csproj
+++ b/RFRAP.Domain/RFRAP.Domain.csproj
@@ -17,4 +17,8 @@
       <PackageReference Include="Serilog" Version="3.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="System.IO.Pipelines" />
+    </ItemGroup>
+
 </Project>
