--- a/RFRAP.Web/appsettings.Development.json
+++ b/RFRAP.Web/appsettings.Development.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "тут должна быть ваша строка подключения :)"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=rfrap_db;Username=postgres;Password=postGet5243"
+  },
+  "UploadFilesConfiguration": {
+    "AbsolutePath": "C://Users//Stepan//RiderProjects//RFRAP//uploads/"
   }
 }
