--- a/RFRAP.Web/appsettings.Development.json
+++ b/RFRAP.Web/appsettings.Development.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=rfrap_db;Username=postgres;Password=postGet5243"
+    "DefaultConnection": "тут должна быть ваша строка подключения :)"
   },
   "UploadFilesConfiguration": {
-    "AbsolutePath": "C://Users//Stepan//RiderProjects//RFRAP//uploads/"
+    "AbsolutePath": "тут должен быть ваш путь к папке, куда файлы устанавливать :))"
   }
 }
