--- a/RFRAP.Web/appsettings.Development.json
+++ b/RFRAP.Web/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=database;Port=5432;Database=rfrap_db;Username=postgres;Password=postGet5243"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=rfrap_db;Username=postgres;Password=postGet5243"
   },
   "UploadFilesConfiguration": {
     "AbsolutePath": "C://Users//Stepan//RiderProjects//RFRAP//uploads/"
